# semantic-scholar-fastmcp-mcp-server

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
