[project]
name = "semantic-scholar-fastmcp-mcp-server"
version = "0.1.0"
description = "Semantic Scholar MCP server using FastMCP"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "fastmcp>=2.0.0,<3.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[project.scripts]
semantic-scholar-fastmcp-mcp-server = "semantic_scholar.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
